fix: light mode color contrast issue

--- a/src/styles/components/_read-the-docs.css
+++ b/src/styles/components/_read-the-docs.css
@@ -1,3 +1,9 @@
 .cmp-read-the-docs {
-  color: #999;
+  color: #666;
+}
+
+@media (prefers-color-scheme: dark) {
+  .cmp-read-the-docs {
+    color: #999;
+  }
 }
